Refactor to use aiolambda
